@@ -7,6 +7,7 @@ Variables starting with a (*) can't be changed by the script (most can be read t
 
 Changelog:
 10.5:
+- EOSTorque, EOSTorqueAngle and Scatter of flipper element can now be changed by script
 - document missing DMDColoredPixels and add simple example for DMD access
 - add SSRScale to the table element
 - extend X and Y of EMReel and textbox elements so that these can be changed by the script
@@ -376,11 +377,11 @@ Variables
 *StartAngle(float)
 *EndAngle(float)
 *FlipperRadiusMin(float)
-*EOSTorque(float) - This value/factor affects the way how long a flipper arm stays in the up/raised position even when you released the flipper button.
-                    On real pinballs it will take some time until the flipper solenoid loses it's power until the flipper drops down or is forced to move by a hitting ball.
-                    The default value is 0.75. For fine tuning you can change that but not higher than 1 or lower than 0.5 or the result will be totally unrealistic.
-*EOSTorqueAngle(float) - This configures the range where the EOS Torque will be applied
-CurrentAngle(float) - only readable
+EOSTorque(float) - This value/factor affects the way how long a flipper arm stays in the up/raised position even when you released the flipper button.
+                   On real pinballs it will take some time until the flipper solenoid loses it's power until the flipper drops down or is forced to move by a hitting ball.
+                   The default value is 0.75. For fine tuning you can change that but not higher than 1 or lower than 0.5 or the result will be totally unrealistic.
+EOSTorqueAngle(float) - This configures the range where the EOS Torque will be applied
+*CurrentAngle(float) - only readable
 
 Friction(float) - 0..1
 RampUp(float) - Coil ramp up speed. Set to 0 for fastest flipper response.
@@ -389,7 +390,7 @@ ElasticityFalloff(float)
 Return(float)
 Mass(float)
 Strength(float)
-*Scatter(float)
+Scatter(float)
 OverridePhysics(int) - overrides the flipper physics settings with pre defined settings defined under Preferences -> Physics Options.
                        You can define up to 8 different physics settings for the table and the flippers. Save them to one of the 8 slots and
                        by assigning the slot number to this OverridePhysics it overrides these settings. default=0 (means use table settings)
